# OpenCL-test

./: .env.cmake  CMakeLists.txt  debug.bat  release.bat
src/: main.cpp  vecsum.cl
